# more-tech-hakaton

./: .env.example  .gitignore  LICENSE  README.rst  docker-compose.dev.yml  docker-compose.yml  vault.nginx.conf
.github/workflows/: codeql.yml  docker-ci.yml  linting.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/src/: app.py  config.py  init_db.py
backend/src/functions/: __init__.py
backend/src/routes/: __init__.py
frontend/: Dockerfile  nuxt.config.ts  package.json  tailwind.config.js
frontend/assets/styles/: config.scss
frontend/components/: Footer.vue  NavBar.vue  Spinner.vue
frontend/composables/: useApiUrl.js
frontend/layouts/: default.vue
frontend/pages/: index.vue
nginx/: Dockerfile  nginx.conf  nginx.dev.conf
scripts/: start.sh  stop.sh
services/notify/: Dockerfile  Dockerfile.dev  pyproject.toml
services/notify/src/: config.py
systemd/: vault.service
